Nikola auto commit.
Nikola version: 7.8.14

--- a/requirements.in
+++ b/requirements.in
@@ -3,10 +3,11 @@ ghp-import2
 jupyter
 networkx
 Nikola
-pandas
-pipdeptree
 pip-tools
+pipdeptree
+pkg-resources
 ptpython
+requests-html
 seaborn
 tabulate
 virtualfish
